public/src/app/app.component.scss
body {
    height: 100vh;
    width: 100%;
    margin: 0;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    line-height: 1.5;
    font-family: sans-serif;
    font-weight: 100;
}

main {
    height: 100%;
    width: 100%;
}

ol,
li {
    padding: 0;
    margin: 0;
    list-style: none;
}

.calendar-month {
    position: relative;
    background-color: var(--grey-200);
    border: solid 1px var(--grey-200);
    width: 80%;
    text-align: center;
    margin: 0 auto;

    &-header {
        display: flex;
        justify-content: center;
        background: rgba(145, 145, 145, 0.301);

        color: white;
        padding: 10px;
        border-left: 4px solid black;
        border-right: 4px solid black;
        border-bottom: 4px solid black;

        margin-bottom: 15px;

        h1 {
            width: 236px;
            margin-top: 10px;
        }
        &-selected-month {
            font-size: 24px;
            font-weight: 600;
        }
        &-selectors > * {
            cursor: pointer;
            display: inline-block;
        }
    }
    &.hide {
        opacity: 0.15;
    }
}
.day-of-week,
.days-grid {
    display: grid;
    grid-template-columns: repeat(7, 1fr);
}
.day-of-week {
    color: var(--grey-800);
    font-size: 18px;
    padding-bottom: 5px;
    padding-top: 10px;
    border-bottom: 2px solid white;
    color: white;
}
.days-grid {
    height: 100%;
    position: relative;
    grid-gap: 10px;
    border-top: solid 1px var(--grey-200);
    margin-top: 10px;
}
.calendar-day {
    position: relative;
    font-size: 16px;
    padding: 5px;
    border: 2px solid black;
    background: rgba(255, 255, 255, 0.685);
    color: black;

    &--not-current {
        background: rgba($color: #5e5e5e, $alpha: 0.5);
        color: white;
    }
    &-today {
        padding-top: 4px;
        color: #fff;
        background-color: black;
    }

    &:hover {
        transform: scale(1.1);
        cursor: pointer;
        transition: 0.2s ease-in-out;
    }

    &.hide {
        visibility: hidden;
    }
}

.expandDay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
    visibility: hidden;
    transform: translate3d(0,-100%,0);
    transition: all 0.5s ease-out;

    &.show {
        visibility: visible;
        transform: translate3d(0,0,0);

    }
    .dayContent {
        margin: auto;
        margin-top: 10vh;
        width: 75%;
        height: 75vh;
        overflow: auto;
        background: rgba(59, 59, 59, 0.425);
        color: black;
        opacity: 1.0;
        border: 3px solid black;
        text-align: center;

        h1 {
            height: 75px; 
            margin-top: 20px;
            color: white;
            text-shadow: 1px 1px 8px rgb(0, 0, 0);
            margin-left: 3%;
        }

        .dayInfo {
            li  {
                text-align: left;
                color: white;
                text-shadow: 1px 1px 8px rgb(0, 0, 0);
                span {
                    font-weight: bold;
                    text-decoration: underline;
                }
            }
            h3 span {
                cursor: pointer;
                text-shadow: 1px 1px 8px rgb(190, 190, 190);

                &:hover {
                    text-decoration: underline;
                }
            }
            h5 {
                margin: 20px;
                span {
                    cursor: pointer;
                    text-shadow: 1px 1px 8px rgb(190, 190, 190);
    
                    &:hover {
                        text-decoration: underline;
                    }
                }
            }
            .selected {
                color: rgb(228, 228, 228);
                text-shadow: 2px 2px 8px rgb(0, 0, 0);
                text-decoration: underline;
            }
        }
    }
}
.closeBtn {
    display: inline-block;
    position: fixed;
    cursor: pointer;

    .btn-line {
        width: 28px;
        height: 3px;
        margin: 0 0 5px 0;
        background: white;
        border-radius: 5px;

        &:nth-child(1) {
            transform: rotate(45deg) translate(4px, 1px);
        }
        &:nth-child(2) {
            transform: rotate(-45deg) translate(5px, -2px);
        }
    }
    .calendar-day {
        min-height: 50px;
    }

}
@media screen and (max-width: 500px) {
    .dayContent h1 {
        display: block;
        font-size: 28px;
    }
    .dayInfo {
        padding: 10px 10px;
    }
    .calendar-month {
        width: 94%;
        &-header {
            height: 75px;
            h1 {
                width: 214px;
            }
    
            &-selected-month {
                font-size: 20px;
                font-weight: 600;
            }
        }
    }
    .calendar-day {
        min-height: 90px;
        padding-top: 45%;
    }
    .closeBtn {
        right: 4%;
        top: 120px;
    }
}
@media screen and (min-width: 501px) {
    .dayContent h1 {
        display: inline-block;
        font-size: 32px;
    }
    .dayInfo {
        padding: 10px 20px;
    }
    .expandDay .dayContent {
        width: 85%;
        height: 80vh;
    }
    .calendar-month {
        width: 90%;
        &-header {
            height: 100px;
            h1 {
                width: 236px;
            }
    
            &-selected-month {
                font-size: 24px;
                font-weight: 600;
            }
        }
    }
    .calendar-day {
        min-height: 90px;
        padding-top: 45%;
    }
    .closeBtn {
        right: 11%;
        top: 110px;
    }
}
@media screen and (min-width: 767px) {
    .expandDay .dayContent {
        width: 75%;
        height: 75vh;
        h1 {
            font-size: 34px;
        }
    }
    .closeBtn {
        right: -18%;
    }
    .calendar-day {
        min-height: 100px;
    }
    .calendar-month {
        width: 80%;
    }
    .calendar-day {
        min-height: 100px;
        padding-top: 15px;
    }
    .closeBtn {
        right: 8%;
        top: 110px;
    }
}
@media screen and (min-width: 1171px) {
    .expandDay {
        .dayInfo {
            padding: 10px 30px;
        }
        .dayContent {
            width: 75%;
            height: 75vh;
        }
    }
}

